updated monitor, now running on 8101

--- a/monitor/index.less
+++ b/monitor/index.less
@@ -11,9 +11,24 @@ html,body{
   font-family:sans-serif;
 }
 
+.row{
+  width:100%;
+}
+.row-item {
+  display:inline-block;
+  vertical-align: middle;
+  margin:0 auto;
+}
+.centered {
+  text-align:center;
+}
+#ticker-wrapper{
+  width:60%;
+  margin:0 5%;
+}
 #ticker{
   display:inline-block;
-  width:400px;
+  width:100%;
   height:200px;
 }
 .label{
